# PyTorch-Artificial-Neural-Networks

./: .gitignore  README.md  informacja_zwrotna.md  pyproject.toml
projekt_2/: 1.0_DM_data_analysis.ipynb  1.0_DM_modeling.ipynb  TabPFN.ipynb  best.pt  data.py  data_analysis.ipynb  experiment.py  features_scaler.pkl  input_data_scaler.pkl  model.py  modeling.ipynb  pred.csv  predict.py  pyproject.toml  sale_price_scaler.pkl  save_model.py  test_dataset.csv  train.py  train_dataset.csv
projekt_3/: 1.0_DM_data_analysis.ipynb  2.0_DM_modeling.ipynb  2.1_DM_modeling.ipynb  2.2_DM_modeling.ipynb  3.0_DM_evaluate.ipynb  model.py  pred.csv  pyproject.toml
projekt_4/: DM_DCGAN_evaluation.ipynb  DM_DCGAN_modeling.ipynb  DM_Diffusion_modeling.ipynb  model.py  pyproject.toml
projekt_5/: 1.0_DM_RNN_modeling.ipynb  pred.csv
projekt_6/: 1_0_DM_hate_speech_classification.ipynb  pred.csv
