[project]
name = "ssne"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "jupyter>=1.1.1",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "ruff>=0.11.11",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "transformers>=4.52.4",
    "wandb>=0.19.11",
    "accelerate>=0.26.0",
    "sacremoses>=0.1.1",
]
