[project]
name = "projekt-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.1",
    "pytorch-fid>=0.3.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "wandb>=0.19.10",
]
